<resources>
    <string name="app_name">ViaBla</string>
    <string name="login">Inicio de sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password2">Confirmar Contraseña</string>
    <string name="btnLogin">Acceder</string>
    <string name="register">Registrarse</string>
    <string name="clickLogin">Iniciar sesión</string>
    <string name="name">Usuario</string>
    <string name="privacy_notice">Política de privacidad\n\nEn ViaBla, valoramos la privacidad de nuestros usuarios y nos comprometemos a proteger su información personal. Esta política de privacidad describe cómo recopilamos, utilizamos, divulgamos y protegemos la información que recopilamos de nuestros usuarios a través del uso de la ubicación, el micrófono, el usuario, la contraseña y el correo electrónico en nuestra APP. Al utilizar nuestra APP, usted acepta los términos de esta política de privacidad.\n\nRecopilación de información:\n\nCuando se registra en nuestra APP, recopilamos su usuario, contraseña y correo electrónico para poder crear una cuenta de usuario y proporcionarle acceso a los servicios de navegación y búsqueda de puntos de interés cercanos. Además, nuestra APP utiliza su ubicación para proporcionar servicios basados en la ubicación, como la navegación y la actualización de reportes de puntos de interés cercanos, y el micrófono de su dispositivo móvil se utiliza solo cuando desea enviar una nota de voz.\n\nUso de la información:\n\nLa información que recopilamos se utiliza para proporcionarle los servicios de navegación y búsqueda de puntos de interés en función de su ubicación, y para permitir la transmisión de notas de voz mediante el uso del micrófono de su dispositivo. Además, utilizamos su información de usuario y correo electrónico para proporcionarle información sobre actualizaciones de la APP, ofertas especiales y otros servicios que puedan interesarle.\n\nDivulgación de información:\n\nNo compartimos su información personal con terceros sin su consentimiento, salvo en los casos en que sea necesario para cumplir con una orden judicial o una ley aplicable, proteger nuestros derechos o propiedad, o si creemos de buena fe que la divulgación es necesaria para prevenir un daño físico o financiero.\n\nProtección de información:\n\nTomamos medidas razonables para proteger la información de nuestros usuarios. Utilizamos protocolos de seguridad para proteger su información contra el acceso no autorizado, la alteración, la divulgación o la destrucción. También le recomendamos que tome medidas para proteger su información personal, como mantener su contraseña segura y no compartirla con terceros.\n\nOpciones de privacidad:\n\nUsted puede elegir no compartir su información de ubicación en cualquier momento en la configuración de la APP o en la configuración de su dispositivo móvil. También puede optar por no utilizar la función de notas de voz de la APP. Si desea cancelar su cuenta de usuario, puede hacerlo en la configuración de la APP o poniéndose en contacto con nosotros en ViaBlaAPP@gmail.com\n\nCambios a esta política:\n\nNos reservamos el derecho de actualizar esta política de privacidad en cualquier momento. Le notificaremos de cualquier cambio importante en la política de privacidad mediante la publicación de una notificación en nuestra APP o por correo electrónico.\n\nSi tiene preguntas o comentarios sobre nuestra política de privacidad, no dude en ponerse en contacto con nosotros en ViaBlaAPP@gmail.com</string>

</resources>